<resources>
    <string name="app_name">Room Lovely Favorite Places</string>
    <string name="hint">Search a place…</string>
    <string name="map_id">map_id</string>
    <string name="map_edit">map_edit</string>
    <string name="map_add_from_internet">map_add_from_internet</string>
    <string name="textView4_addPlace">Add Map</string>
    <string name="textView1_name">Name:</string>
    <string name="textView2_address">Address:</string>
    <string name="textView3_latLng">Coordinates:</string>
    <string name="textView4_fromInternet">Add Place</string>
    <string name="textView5_photo">Photo:</string>
    <string name="button1_deleteData">YES</string>
    <string name="button2_deleteData">NO</string>
    <string name="textView1_deletePlace">The place are deleted…</string>
    <string name="button2_cancel">Cancel</string>
    <string name="textView4_editPlace">Edit Place</string>
    <string name="button3_editPlace">Show</string>
    <string name="button3_fromInternet">Show</string>
    <string name="textView1_credits">All rights reserved to the creator of the application \n - \n Elior Cohen</string>
    <string name="button1_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello User!</string>
    <string name="lat_marker">lat</string>
    <string name="lng_marker">lng</string>
    <string name="map_search_key">map_search_key</string>
    <string name="map_favorites_key">map_favorites_key</string>
    <string name="key_units">myKm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="api_key_geo">AIzaSyAVdsuXFE3Ca3vwy_lopgMUHTfJLdd3_Ck</string>
    <string name="api_key_search">AIzaSyCiH1NZGzqJE2T_X5CphQD3iazzrjJbL4A</string>
    <string name="api_key_map">AIzaSyDc7oNJ8FQZc6xmDVEvj-vewU5-ohnlwR0</string>
    <string name="places_key">types=accounting|airport|amusement_park|aquarium|art_gallery|atm|bakery|" +
                                "bank|bar|beauty_salon|bicycle_store|bowling_alley|bus_station|cafe|campground|car_dealer|car_rental|car_repair|car_wash|casino|" +
                                "cemetery|church|city_hall|clothing_store|convenience_store|courthouse|dentist|department_store|doctor|electrician|electronics_store|" +
                                "embassy|fire_station|florist|funeral_home|furniture_store|gas_station|gym|hair_care|hardware_store|hindu_temple|home_goods_store|home_goods_store|" +
                                "hospital|insurance_agency|jewelry_store|laundry|lawyer|library|liquor_store|local_government_office|locksmith|lodging|meal_delivery|meal_takeaway|" +
                                "mosque|movie_rental|movie_theater|moving_company|museum|night_club|painter|park|parking|pet_store|pharmacy|physiotherapist|plumber|police|" +
                                "post_office|real_estate_agency|restaurant|roofing_contractor|rv_park|school|shoe_store|shopping_mall|spa|stadium|storage|store|subway_station|" +
                                "supermarket|synagogue|taxi_stand|train_station|transit_station|travel_agency|veterinary_care|zoo</string>
    <string name="default_notification_channel_id">1</string>
    <string name="item_removed_message">Please click on one of the markers to use the info you want…</string>
    <string name="undo">OK</string>
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for corefunctionality.</string>
</resources>
